--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -18,15 +18,15 @@ html, body {
   display: none !important;
 }
 
-.btn {
+.btn, .cater-btn {
   background-color: rgb(1, 86, 79);
   font-weight: 200;
-  color: white;
+  color: white !important;
 }
 
-.btn:hover {
+.btn:hover, .cater-btn:hover {
   background-color: rgb(289, 187, 24);
-  color: black;
+  color: black !important;
   font-weight: 200;
 }
 
